kubernetes/apps/crowdsec/crowdsec-web-ui/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: crowdsec-web-ui
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: crowdsec-web-ui
      app.kubernetes.io/name: crowdsec-web-ui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector:
            matchLabels:
              k8s-app: crowdsec
              type: lapi
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 6060
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
